feat: implementar agendamento de notificações e histórico de aluguéis
- Adicionado endpoint para agendar envio de notificações de vencimento.
- Criada nova página para agendamento de notificações com suporte a fuso horário.
- Implementado histórico de aluguéis, permitindo arquivar aluguéis cancelados ou finalizados.
- Atualizado AluguelService para incluir lógica de arquivamento e renovação de aluguéis.
- Adicionados filtros na listagem de aluguéis para melhor busca e visualização.
- Atualizados templates HTML para suportar novas funcionalidades de agendamento e renovação.
- Criados testes para validar as novas funcionalidades e regras de negócio.